# py_net_speedtest

./: .gitignore  main.py  pyproject.toml
