[tool.poetry]
name = "py-net-speedtest"
version = "1.0.0"
description = ""
authors = ["Navid <navidjalili3@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_net_speedtest"}]

[tool.poetry.dependencies]
python = "^3.11"
speedtest-cli = "^2.1.3"
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
